dataset1235/2025-2/1153765216/users/1370515670/executions/2814675586_997093868.log
== SUBMISSION (2025-08-26 18:40:55)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:40:27)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:03:37)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:40:57)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:41:27)
-- CODE: 
a = input(12))
b = input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = input(12))
                 ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:40:12)
-- CODE: 
a = float(input(12)
b = float(input(56)
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:39:02)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:40:11)
-- CODE: 
a = float(input(12)
b = float(input(56)
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(input(12)
              ^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:05:28)
-- CODE: 
a = int((input(12)))
b = int(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:39:44)
-- CODE: 
a = float(int(input(12))
b = float(int(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 1
    a = float(int(input(12))
              ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:39:04)
-- CODE: 
a = float(input(12))
b = float(input(56))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
125620000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
12565.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
125668.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
1256185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
125644.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
1256108.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
